--- a/congress/style.css
+++ b/congress/style.css
@@ -9,6 +9,79 @@ body {
     background-repeat: round;
 }
 
+h1 {
+    color: black;
+    -webkit-text-stroke-width: 1.25px;
+    -webkit-text-stroke-color: darkred;
+    text-align: center;
+    font-size: 48px;
+}
+
+.button {
+    height: 100px;
+    width: 210px;
+    margin: 10px 50px;
+    position: relative;
+    top: 100%;
+    left: 18%;
+}
+
+#seniorityButton {
+    color: darkblue;
+    background-color: darkred;
+    height: 3em;
+    padding: 6px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    border-radius: 8px;
+    -webkit-text-stroke-color: black;
+    -webkit-text-stroke-width: .75px;
+}
+
+#birthdayButton {
+    color: darkblue;
+    background-color: darkred;
+    height: 3em;
+    padding: 6px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    border-radius: 8px;
+    -webkit-text-stroke-color: black;
+    -webkit-text-stroke-width: .75px;
+}
+
+#missedVotes {
+    color: darkblue;
+    background-color: darkred;
+    height: 3em;
+    padding: 6px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    border-radius: 8px;
+    -webkit-text-stroke-color: black;
+    -webkit-text-stroke-width: .75px;
+}
+
+#partyHack {
+    color: darkblue;
+    background-color: darkred;
+    -webkit-text-stroke-color: black;
+    -webkit-text-stroke-width: .75px;
+    height: 3em;
+    padding: 6px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    border-radius: 8px;
+}
+
 .congressGrid {
     display: flex;
     flex-wrap: wrap;
