--- a/pokemon/style.css
+++ b/pokemon/style.css
@@ -67,7 +67,7 @@ h1 {
     text-align: center;
     display: inline-block;
     font-size: 16px;
-    margin: auto;
+    margin: 4px 2px;
     border-radius: 8px;
 }
 
