--- a/style.css
+++ b/style.css
@@ -1,168 +1,170 @@
-                                                  :root {
-                                                     --bluegrey: #C1BFD9;
-                                                     --darkblue: #050330;
-                                                 }
-                                                 
-                                                 * {
-                                                     margin: 0;
-                                                     padding: 0;
-                                                     box-sizing: border-box;
-                                                     scroll-behavior: smooth;
-                                                 }
-                                                 
-                                                 body {
-                                                     font-family: 'Roboto', sans-serif;
-                                                 }
-                                                 
-                                                 h1 {
-                                                     font-family: 'Antic Slab';
-                                                     font-size: 42px;
-                                                 }
-                                                 
-                                                 p {
-                                                     text-align: center;
-                                                 }
-                                                 
-                                                 .navlist {
-                                                     display: flex;
-                                                     list-style: none;
-                                                 }
-                                                 
-                                                 .navlist a {
-                                                     display: block;
-                                                     font-size: 1.5em;
-                                                     padding: .75em .5em;
-                                                     color: white;
-                                                 }
-                                                 
-                                                 .navlist a:hover {
-                                                     background: lightslategrey;
-                                                 }
-                                                 
-                                                 #navbar {
-                                                     width: 100%;
-                                                     display: flex;
-                                                     justify-content: flex-end;
-                                                     position: fixed;
-                                                     background-color: darkslategrey;
-                                                     color: white;
-                                                 }
-                                                 
-                                                 #welcome-section {
-                                                     display: flex;
-                                                     flex-direction: column;
-                                                     justify-content: center;
-                                                     align-items: center;
-                                                     background-color: darkslateblue;
-                                                     color: white;
-                                                     width: 100%;
-                                                     height: 100vh;
-                                                 }
-                                                 
-                                                 #projects {
-                                                     display: flex;
-                                                     flex-wrap: wrap;
-                                                     justify-content: space-evenly;
-                                                     align-items: center;
-                                                     background-color: #050330;
-                                                     height: 100vh;
-                                                     width: 100%;
-                                                 }
-                                                 
-                                                 img {
-                                                     display: flex;
-                                                     flex-wrap: wrap;
-                                                     flex-direction: row;
-                                                     padding: 4px;
-                                                     margin: 4px;
-                                                     border: 2px red solid;
-                                                     height: 10em;
-                                                     width: 15em;
-                                                 }
-                                                 
-                                                 .project-tile {
-                                                     margin: 1em;
-                                                 }
-                                                 
-                                                 .project-tile a:hover {
-                                                     color: blue;
-                                                 }
-                                                 
-                                                 a {
-                                                     text-decoration: none;
-                                                 }
-                                                 
-                                                 #contact {
-                                                     background-color: darkslateblue;
-                                                     color: white;
-                                                     display: flex;
-                                                     flex-direction: column;
-                                                     justify-content: center;
-                                                     align-items: center;
-                                                     width: 100%;
-                                                     height: 100vh;
-                                                     line-height: 3em;
-                                                 }
-                                                 
-                                                 .contact-links {
-                                                     flex-wrap: wrap;
-                                                 }
-                                                 
-                                                 .contact-links a {
-                                                     margin: 1em;
-                                                     color: white;
-                                                 }
-                                                 
-                                                 footer {
-                                                     display: flex;
-                                                     justify-content: space-evenly;
-                                                     align-items: center;
-                                                     text-align: center;
-                                                     background-color: darkslategrey;
-                                                     height: 70px;
-                                                     color: #fff;
-                                                 }
-                                                 
-                                                 .container {
-                                                     position: relative;
-                                                     width: 50%;
-                                                     max-width: 300px;
-                                                 }
-                                                 
-                                                 .overlay {
-                                                     position: absolute;
-                                                     bottom: 0;
-                                                     background: rgb(0, 0, 0);
-                                                     background: rgba(0, 0, 0, 0.5);
-                                                     /* Black see-through */
-                                                     color: #f1f1f1;
-                                                     width: 100%;
-                                                     transition: .5s ease;
-                                                     opacity: 0;
-                                                     color: white;
-                                                     font-size: 20px;
-                                                     padding: 20px;
-                                                     text-align: center;
-                                                 }
-                                                 
-                                                 .container:hover .overlay {
-                                                     opacity: 1;
-                                                 }
-                                                 
-                                                 @media (max-width: 100px) {
-                                                     html {
-                                                         font-size: 100%;
-                                                     }
-                                                 }
-                                                 
-                                                 @media (max-width: 980px) {
-                                                     html {
-                                                         font-size: 80%;
-                                                     }
-                                                 }
-                                                 
-                                                 @media (max-width: 460px) {
-                                                     html {
-                                                         font-size: 60%;
-                                                     }
-                                                 }
+:root {
+    --bluegrey: #C1BFD9;
+    --darkblue: #050330;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+    font-family: 'Antic Slab';
+    font-size: 42px;
+}
+
+p {
+    text-align: center;
+}
+
+.navlist {
+    display: flex;
+    list-style: none;
+}
+
+.navlist a {
+    display: block;
+    font-size: 1.5em;
+    padding: .75em .5em;
+    color: white;
+}
+
+.navlist a:hover {
+    background: lightslategrey;
+}
+
+#navbar {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    position: fixed;
+    background-color: darkslategrey;
+    color: white;
+}
+
+#welcome-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #a3c586;
+    color: white;
+    width: 100%;
+    height: 100vh;
+}
+
+#projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #47697e;
+    height: 100vh;
+    width: 100%;
+}
+
+#myPic {
+    padding: 4px;
+    margin: 4px;
+    height: 15em;
+    width: 20em;
+}
+
+.project-tile {
+    margin: 1em;
+}
+
+.project-tile a:hover {
+    color: blue;
+}
+
+a {
+    text-decoration: none;
+}
+
+#contact {
+    background-color: #fcf1d1;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    line-height: 3em;
+}
+
+.contact-links {
+    flex-wrap: wrap;
+}
+
+.contact-links a {
+    margin: 1em;
+    color: black;
+}
+
+footer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    background-color: darkslategrey;
+    height: 70px;
+    color: #fff;
+}
+
+.container {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    padding: 4px;
+    margin: 4px;
+    border: 3px red solid;
+    height: 11em;
+    width: 5;
+}
+
+.overlay {
+    position: absolute;
+    bottom: 0;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5);
+    /* Black see-through */
+    color: #f1f1f1;
+    width: 100%;
+    transition: .5s ease;
+    opacity: 0;
+    color: white;
+    font-size: 20px;
+    padding: 20px;
+    text-align: center;
+}
+
+.container:hover .overlay {
+    opacity: 1;
+}
+
+@media (max-width: 100px) {
+    html {
+        font-size: 100%;
+    }
+}
+
+@media (max-width: 980px) {
+    html {
+        font-size: 80%;
+    }
+}
+
+@media (max-width: 460px) {
+    html {
+        font-size: 60%;
+    }
+}
